fix: change background for alarmed instead of title